name:                sudokuAccelerateStack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sudokuAccelerateStack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 David van Balen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  

executable sudokuAccelerateStack
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       AccPrune, Utils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       accelerate,
                       accelerate-llvm,
                       lens-accelerate,
                       llvm-hs,
                       llvm-hs-pure,
                       cuda
